Examples and duckboard lib basic functionality

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+Library in PHP to connect with Ducksboard API www.ducksboard.com
+
 This file was created by JetBrains PhpStorm 5.0.4 for binding GitHub repository
